--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,3 +29,5 @@ bind-key -T copy-mode-vi C-j select-pane -D
 bind-key -T copy-mode-vi C-k select-pane -U
 bind-key -T copy-mode-vi C-l select-pane -R
 bind-key -T copy-mode-vi C-\ select-pane -l
+
+source-file ~/.tmuxline
