Add updated files

--- a/.tmuxinator/default.yml
+++ b/.tmuxinator/default.yml
@@ -4,6 +4,6 @@ windows:
   - default:
       layout: b5b9,255x70,0,0{127x70,0,0[127x35,0,0,0,127x34,0,36,2],127x70,128,0,1}
       panes:
-        - ls
+        - clear && ls
         - clear
-        - clear
+        - clear && python3 "$HOME/dev/pyfortune/pyfortune.py" | cowsay -W 65 -s
