Add lg and fix indent

--- a/.gitconfig
+++ b/.gitconfig
@@ -6,9 +6,15 @@
 	helper = cache --timeout=3600
 [push]
 	default = simple
+[pull]
+	rebase = true
+[core]
+	excludesfile = ~/.gitignore_global
+	pager = diff-so-fancy | less --tabs=4 -RFX
 [alias]
-  branches = branch -a
-  tags = tag
+    lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+    branches = branch -a
+    tags = tag
 	stashes = stash list
 	unstage = reset -q HEAD --
 	discard = checkout --
@@ -19,13 +25,11 @@
 	precommit = diff --cached --diff-algorithm=minimal -w
 	unmerged = diff --name-only --diff-filter=U
 	remotes = remote -v
+[gpg]
+	program = gpg2
 [commit]
 	gpgsign = true
     template = ~/.gitmessage
-[gpg]
-	program = gpg2
-[core]
-	pager = diff-so-fancy | less --tabs=4 -RFX
 [color]
 	ui = true
 [color "diff-highlight"]
