Switch to nord theme

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,6 +32,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'arcticicestudio/nord-tmux'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
@@ -76,6 +77,8 @@ set -g @scroll-speed-num-lines-per-scroll "1"
 
 set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_show_sync_mode 'on'
+
+set -g default-terminal "screen-256color"
 
 source-file ~/.tmuxline
 
