Decided I don't like restore

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -70,7 +70,7 @@ set -g @plugin 'arcticicestudio/nord-tmux'
 
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
+set -g @continuum-restore 'off'
 set -g @scroll-without-changing-pane 'on'
 set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
 set -g @scroll-speed-num-lines-per-scroll "1"
