Update tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,6 +6,10 @@ set -g escape-time 50
 # Better color
 set -ga terminal-overrides ",xterm-256color:Tc"
 
+# Undercurl
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+
 set-window-option -g mode-keys vi
 
 # Allow the arrow key to be used immediately after changing windows
@@ -18,55 +22,12 @@ set -g renumber-windows on
 set-option -gq utf8
 set-window-option -gq utf8 on
 
+# https://github.com/tmux-plugins/tmux-copycat/issues/148
+bind / copy-mode \; send ?
+bind C-u copy-mode \; send -X search-backward "(https?://|git@|git://|ssh://|ftp://|file:///)[[:alnum:]?=%/_.:,;~@!#$&()*+-]*"
+
 # Reload ~/.tmux.conf using PREFIX r
 bind r source-file ~/.tmux.conf \; display "TMUX configuration is reloaded!"
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'nhdaly/tmux-better-mouse-mode'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'arcticicestudio/nord-tmux'
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
-
-## Shortcuts of plugins
-
-# TPM
-# <prefix> + I: installs new plugins from GitHub or any other git repository
-# <prefix> + U: updates plugins
-# <prefix> + alt-u: remove/uninstall plugins not on the plugin list
-
-# Copycat
-# <prefix> + /: regex search
-# <prefix> + ctrl-f : simple file search
-# <prefix> + ctrl-g : jumping over git status files (used after `git status` command)
-# <prefix> + alt-h: jumping over SHA-1 hashes (used after `git log` command)
-# <prefix> + ctrl-u : url search (http, ftp and git urls)
-# <prefix> + ctrl-d : number search (mnemonic d, as digit)
-# <prefix> + alt-i : ip address search
-# n, N: jumps to the next/previous match
-# Enter: To copy a highlighted match (vi mode)
-# ctrl-w / alt-w: To copy a highlighted match (emacs mode)
-# <prefix> + ]: To paste (this is Tmux default paste)
-# Open
-# o: open a highlighted selection with the system default program (open for OS X)
-# ctrl-o: open a highlighted selection with the $EDITOR
-
-# Resurrect
-# <prefix> + ctrl-s: save
-# <prefix> + ctrl-r: restore
-
-#set-option -ag terminal-overrides ',xterm*:Cr=\E]12;gray\007'
 
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-capture-pane-contents 'on'
@@ -78,9 +39,40 @@ set -g @scroll-speed-num-lines-per-scroll "1"
 set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_show_sync_mode 'on'
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+
+## Shortcuts of plugins
+
+# TPM
+# <prefix> + I: installs new plugins from GitHub or any other git repository
+# <prefix> + U: updates plugins
+# <prefix> + alt-u: remove/uninstall plugins not on the plugin list
+
+# Resurrect
+# <prefix> + ctrl-s: save
+# <prefix> + ctrl-r: restore
+
 set -g default-terminal "screen-256color"
 
-source-file ~/.tmuxline
+# TODO fix
+# (later me: fix what?)
+set -g status "on"
+setw -g window-status-separator ""
+
+source-file ~/.config/tmux/tokyonight_day.tmux
+
+set -g status-left "#[fg=#e9e9ed,bg=#2e7de9,bold] #S #[fg=#2e7de9,bg=#e9e9ec,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#e9e9ec,bg=#e9e9ec,nobold,nounderscore,noitalics]#[fg=#2e7de9,bg=#e9e9ec] #{prefix_highlight} #[fg=#a8aecb,bg=#e9e9ec,nobold,nounderscore,noitalics]#[fg=#2e7de9,bg=#a8aecb] Solar day: #(~/go/bin/sundial -city 'Denver')  #(ddate +\"%%{%%d %%b, %%Y%%}%%N: %%H\")  %Y-%m-%d  %-I:%M %p #[fg=#2e7de9,bg=#a8aecb,nobold,nounderscore,noitalics]#[fg=#e9e9ed,bg=#2e7de9,bold] #(whoami) "
+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
