--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -27,6 +27,18 @@ $shell\
 $character\
 """
 
+#     set -l foreground 3760bf
+#     set -l selection 99a7df
+#     set -l comment 848cb5
+#     set -l red f52a65
+#     set -l orange b15c00
+#     set -l yellow 8c6c3e
+#     set -l green 587539
+#     set -l purple 7847bd
+#     set -l cyan 007197
+#     set -l pink 9854f1
+# https://github.com/folke/tokyonight.nvim/blob/main/extras/lua/tokyonight_day.lua
+
 # Only ZSH and fish
 right_format = """
 $cmd_duration\
@@ -34,27 +46,33 @@ $cmd_duration\
 
 add_newline = false
 
+command_timeout = 1000
+
 # http://www.amp-what.com <- interesting chars
 # https://www.nerdfonts.com/cheat-sheet
 # 🜁 ☾ ☉⯰⯱
 [character]
 # error_symbol = "[❌ ](bold red)"
-success_symbol = "[☿](bold green)"
-error_symbol = "[☿](bold green)" # we handle errors by displaying the code
+success_symbol = "[ ☿](bold #587539)"
+error_symbol = "[ ☿](bold #587539)" # we handle errors by displaying the code
 
 [cmd_duration]
 min_time = 10_000  # Show command duration over 10,000 milliseconds (= 10 sec)
 format = "took [$duration]($style) "
+style = "bold #587539"
 
 [directory]
 truncation_length = 3
 # truncation_symbol = "…/"
 # truncation_symbol = "…"
 # truncation_symbol = "[…]/"
+style = "bold #2e7de9"
+format = "[$path]($style)[$read_only]($read_only_style)"
 truncation_symbol = "⋮"
 truncate_to_repo = false
-repo_root_style = "bold cyan"
-repo_root_format = "[|$repo_root]($repo_root_style)[$path]($style)[$read_only]($read_only_style) "
+repo_root_style = "bold #6172b0"
+repo_root_format = "[|$repo_root]($repo_root_style)[$path]($style)[$read_only]($read_only_style)"
+read_only_style = "bold #07879d"
 read_only = " "
 
 # Here is how you can shorten some long paths by text replacement
@@ -74,23 +92,47 @@ read_only = " "
 
 [git_branch]
 symbol = ""
-format = '[$symbol $branch]($style)'
+style = "bold #9854f1"
+format = '[ $symbol$branch]($style)'
 ignore_branches = ["master", "main"]
 
 [git_status]
-format = '([\[$conflicted$stashed$deleted$renamed$modified$untracked$staged$ahead_behind\]]($style) )'
-style = "bold bright-blue"
+format = '([\[$conflicted$stashed$deleted$renamed$modified$untracked$staged$ahead_behind\]]($style))'
+style = "bold #07879d"
 # ahead = '⇡${count}'
 # diverged = "⇕⇡${ahead_count}⇣${behind_count}"
 # behind = '⇣${count}'
-# staged = '[++\($count\)](green)'
+# staged = '[++\($count\)](#587539)'
 deleted = "x"
+
+[git_commit]
+tag_symbol = ' '
+style = "bold #9854f1"
+format = '[\(ﰖ$hash$tag\)]($style)'
 
 # Disable the package module, hiding it from the prompt completely
 [package]
 disabled = true
 
 [status]
-style = "bg:red"
-format = '[\[$status:$common_meaning\]]($style) '
+style = "bg:#c4c8da fg:bold #c64343"
+format = '[\[$status:$common_meaning\]]($style)'
 disabled = false
+
+# This isn't great, but it works.
+[shell]
+style = "bold #587539"
+format = '[$indicator]($style)'
+fish_indicator = '' # Fish is default, don't show anything.
+bash_indicator = ' \(bash\)'
+zsh_indicator = ' \(zsh\)'
+disabled = false
+
+[vagrant]
+disabled = true
+
+[kubernetes]
+disabled = false
+style = "bold #8990b3"
+detect_folders = ["charts"]
+detect_files = ["kustomization.yaml"]
