--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,7 +4,8 @@ set -g mouse on
 set -g escape-time 50
 
 # Better color
-set -ga terminal-overrides ",xterm-256color:Tc"
+if-shell '[ ! env | grep -qvF "com.apple.Terminal" ]' \
+    'set -ga terminal-overrides ",xterm-256color:Tc"'
 
 # Undercurl
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
