--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,8 +4,7 @@ set -g mouse on
 set -g escape-time 50
 
 # Better color
-if-shell '[ ! env | grep -qvF "com.apple.Terminal" ]' \
-    'set -ga terminal-overrides ",xterm-256color:Tc"'
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Undercurl
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
@@ -51,6 +50,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
+
 ## Shortcuts of plugins
 
 # TPM
@@ -72,8 +72,7 @@ setw -g window-status-separator ""
 source-file ~/.config/tmux/tokyonight_day.tmux
 
 set -g status-left "#[fg=#e9e9ed,bg=#2e7de9,bold] #S #[fg=#2e7de9,bg=#e9e9ec,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#e9e9ec,bg=#e9e9ec,nobold,nounderscore,noitalics]#[fg=#2e7de9,bg=#e9e9ec] #{prefix_highlight} #[fg=#a8aecb,bg=#e9e9ec,nobold,nounderscore,noitalics]#[fg=#2e7de9,bg=#a8aecb] Solar day: #(sundial --city Denver)  #(ddate +\"%%{%%d %%b, %%Y%%}%%N: %%H\")  %Y-%m-%d  %-I:%M %p #[fg=#2e7de9,bg=#a8aecb,nobold,nounderscore,noitalics]#[fg=#e9e9ed,bg=#2e7de9,bold] #(whoami) "
-
+set -g status-right "#[fg=#e9e9ec,bg=#e9e9ec,nobold,nounderscore,noitalics]#[fg=#2e7de9,bg=#e9e9ec] #{prefix_highlight} #[fg=#a8aecb,bg=#e9e9ec,nobold,nounderscore,noitalics]#[fg=#2e7de9,bg=#a8aecb] Solar day: #(sundial --city 'Denver')  #(ddate +\"%%{%%d %%b, %%Y%%}%%N: %%H\")  %Y-%m-%d  %-I:%M %p #[fg=#2e7de9,bg=#a8aecb,nobold,nounderscore,noitalics]#[fg=#e9e9ed,bg=#2e7de9,bold] #(whoami) "
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
