--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,6 +19,12 @@ set-option -g repeat-time 0
 # re-number windows when one is closed
 set -g renumber-windows on
 
+set-option -g set-titles on
+# TODO remove (tmux) https://iterm2.com/documentation-scripting-fundamentals.html
+# TODO two-way-move
+set-option -g set-titles-string "#{session_name}"
+# set-option -g automatic-rename on
+
 # Use UTF-8 encoding
 set-option -gq utf8
 set-window-option -gq utf8 on
@@ -39,6 +45,71 @@ set -g @scroll-speed-num-lines-per-scroll "1"
 
 set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_show_sync_mode 'on'
+
+# GOALS:
+#  - In no mode, double click copies word, triple copies line
+#  - In copy mode, same, but don't scroll down to the bottom
+#  - In both modes, selection is cleared
+# https://unix.stackexchange.com/a/398805
+# https://github.com/tmux-plugins/tmux-yank/blob/1b1a436e19f095ae8f825243dbe29800a8acd25c/yank.tmux#L51
+set -g @yank_with_mouse off
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "reattach-to-user-namespace pbcopy" \; send -X clear-selection
+bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe "reattach-to-user-namespace pbcopy" \; send -X clear-selection
+
+# A lot taken from here:
+# https://www.seanh.cc/2020/12/27/copy-and-paste-in-tmux/
+# There's a good bit to consider about middle-click pasting from tmux, and otherwise not using
+# system clipboard.
+bind-key -T copy-mode DoubleClick1Pane \
+    select-pane \; \
+    send-keys -X select-word \; \
+    run-shell -d 0.2 \; \
+    send-keys -X copy-pipe-no-clear "reattach-to-user-namespace pbcopy" \; \
+    run-shell -d 0.01 \; \
+    send -X clear-selection
+
+bind-key -T copy-mode-vi DoubleClick1Pane \
+    select-pane \; \
+    send -X select-word \; \
+    run-shell -d 0.2 \; \
+    send -X copy-pipe-no-clear "reattach-to-user-namespace pbcopy" \; \
+    run-shell -d 0.01 \; \
+    send -X clear-selection
+
+bind-key -n DoubleClick1Pane \
+    select-pane \; \
+    copy-mode -M \; \
+    send-keys -X select-word \; \
+    run-shell -d 0.2 \; \
+    send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy" \; \
+    run-shell -d 0.01
+
+# Triple:
+
+bind-key -T copy-mode TripleClick1Pane \
+    select-pane \; \
+    send-keys -X select-line \; \
+    run-shell -d 0.2 \; \
+    send-keys -X copy-pipe-no-clear "reattach-to-user-namespace pbcopy" \; \
+    run-shell -d 0.01 \; \
+    send -X clear-selection
+
+bind-key -T copy-mode-vi TripleClick1Pane \
+    select-pane \; \
+    send -X select-line \; \
+    run-shell -d 0.2 \; \
+    send -X copy-pipe-no-clear "reattach-to-user-namespace pbcopy" \; \
+    run-shell -d 0.01 \; \
+    send -X clear-selection
+
+bind-key -n TripleClick1Pane \
+    select-pane \; \
+    copy-mode -M \; \
+    send-keys -X select-line \; \
+    run-shell -d 0.2 \; \
+    send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy" \; \
+    run-shell -d 0.01
+
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
