--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,6 +15,7 @@ set-window-option -g mode-keys vi
 
 # Allow the arrow key to be used immediately after changing windows
 set-option -g repeat-time 0
+set -g focus-events on
 
 # re-number windows when one is closed
 set -g renumber-windows on
@@ -83,6 +84,22 @@ bind-key -n DoubleClick1Pane \
     run-shell -d 0.2 \; \
     send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy" \; \
     run-shell -d 0.01
+
+# Need to copy from copy-mode -e to exit copy mode if click and drag on MouseDragEnd1Pane
+# while in copy mode
+# bind-key -n MouseDragEnd1Pane \
+#     send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy" \; \
+#     send-keys -X cance}" l { copy-mode -q ; l
+
+# bind-key -T root WheelUpPane if-shell -F -t = "#{mouse_any_flag}" \
+#     "send-keys -M"
+#     "if -Ft= '#{alternate_on}'
+#       \"send-keys -t= up ; \"
+#       \"if -Ft= '#{pane_in_mode}'
+#         'send-keys -M ; '
+#         'copy-mode -e -t= ; send-keys -M ; '
+#       \"
+#     "
 
 # Triple:
 
