Update some dotfiles partially

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,8 @@
 set -g mouse on
 
+# set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
+
 # Fix WSL bug displaying weird characters on start
 set -g escape-time 50
 
@@ -10,6 +13,11 @@ if-shell '[ ! env | grep -qvF "com.apple.Terminal" ]' \
 # Undercurl
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+set -g allow-passthrough on
+
+# Hyperlinks
+set -ga terminal-features "*:hyperlinks"
+# TODO open in vim https://gist.github.com/charlietran/43639b0f4e0a01c7c20df8f1929b76f2
 
 set-window-option -g mode-keys vi
 
@@ -46,6 +54,10 @@ set -g @scroll-speed-num-lines-per-scroll "1"
 
 set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_show_sync_mode 'on'
+
+# switch to vim, or fish if can't find vim
+# see: ~/bin/iterm-semantic-vim.sh
+bind-key V run-shell 'tmux select-pane -t $(tmux list-panes -F "##{pane_id}" -f "##{==:##{pane_current_command},vim}" | head -n1) || tmux select-pane -t $(tmux list-panes -F "##{pane_id}" -f "##{==:##{pane_current_command},fish}" | head -n1)'
 
 # GOALS:
 #  - In no mode, double click copies word, triple copies line
@@ -149,8 +161,6 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 # Resurrect
 # <prefix> + ctrl-s: save
 # <prefix> + ctrl-r: restore
-
-set -g default-terminal "screen-256color"
 
 # TODO fix
 # (later me: fix what?)
