--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -2,16 +2,23 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>AI Prompt</key>
+	<string>You are going to translate a natural language description to a series of commands for the \(shell) shell.
+Here is some information about the environment: \(uname)
+Respond with one or more commands. Do not include any explanation or additional text besides the commands.Request: \(ai.prompt)
+</string>
 	<key>AdjustWindowForFontSizeChange</key>
 	<false/>
 	<key>AllowClipboardAccess</key>
 	<true/>
+	<key>AllowIdempotentTriggers</key>
+	<false/>
 	<key>AutoHideTmuxClientSession</key>
 	<true/>
+	<key>CheckTestRelease</key>
+	<false/>
 	<key>CommandSelection</key>
 	<true/>
-	<key>Coprocess MRU</key>
-	<integer>0</integer>
 	<key>CopySelection</key>
 	<false/>
 	<key>Custom Color Presets</key>
@@ -1383,13 +1390,27 @@
 	</dict>
 	<key>Default Bookmark Guid</key>
 	<string>B795685E-853E-4531-B134-26B281B6DAE0</string>
+	<key>DefaultURLScheme</key>
+	<string>https://</string>
 	<key>DimBackgroundWindows</key>
+	<false/>
+	<key>DimInactiveSplitPanes</key>
+	<false/>
+	<key>DisableTopRightIndicators</key>
 	<false/>
 	<key>DisableWindowSizeSnap</key>
 	<integer>1</integer>
 	<key>DoubleClickPerformsSmartSelection</key>
 	<false/>
+	<key>DrawOutlineAroundCursor</key>
+	<false/>
 	<key>EnableDivisionView</key>
+	<true/>
+	<key>EnableUnderlineSemanticHistoryOnCmdHover</key>
+	<true/>
+	<key>EnterCopyModeAutomatically</key>
+	<false/>
+	<key>FastTriggerRegexes</key>
 	<true/>
 	<key>ForceAntialiasingOnRetina</key>
 	<false/>
@@ -2278,10 +2299,12 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>BlexMonoNerdFontCompleteM-Regular 16</string>
+			<string>BlexMonoNFM 18</string>
 			<key>Option Key Sends</key>
 			<integer>2</integer>
 			<key>Place Prompt at First Column</key>
+			<false/>
+			<key>Prevent Opening in a Tab</key>
 			<false/>
 			<key>Prompt Before Closing 2</key>
 			<false/>
@@ -2341,7 +2364,7 @@
 			<key>Show Mark Indicators</key>
 			<false/>
 			<key>Show Status Bar</key>
-			<false/>
+			<true/>
 			<key>Silence Bell</key>
 			<true/>
 			<key>Smart Selection Rules</key>
@@ -2443,13 +2466,56 @@
 					<integer>0</integer>
 					<key>auto-rainbow style</key>
 					<integer>0</integer>
+					<key>default text color</key>
+					<dict>
+						<key>Alpha Component</key>
+						<real>1</real>
+						<key>Blue Component</key>
+						<real>0.72439068555831909</real>
+						<key>Color Space</key>
+						<string>P3</string>
+						<key>Green Component</key>
+						<real>0.37241101264953613</real>
+						<key>Red Component</key>
+						<real>0.25327739119529724</real>
+					</dict>
 					<key>font</key>
-					<string>.AppleSystemUIFont 12</string>
+					<string>BlexMonoNerdFontCompleteM-Regular 14</string>
 					<key>remove empty components</key>
 					<false/>
 				</dict>
 				<key>components</key>
-				<array/>
+				<array>
+					<dict>
+						<key>class</key>
+						<string>iTermStatusBarWorkingDirectoryComponent</string>
+						<key>configuration</key>
+						<dict>
+							<key>knobs</key>
+							<dict>
+								<key>base: compression resistance</key>
+								<integer>1</integer>
+								<key>base: priority</key>
+								<real>5</real>
+								<key>maxwidth</key>
+								<real>+infinity</real>
+								<key>minwidth</key>
+								<integer>0</integer>
+								<key>shared font</key>
+								<string></string>
+							</dict>
+							<key>layout advanced configuration dictionary value</key>
+							<dict>
+								<key>algorithm</key>
+								<integer>0</integer>
+								<key>auto-rainbow style</key>
+								<integer>0</integer>
+								<key>remove empty components</key>
+								<false/>
+							</dict>
+						</dict>
+					</dict>
+				</array>
 			</dict>
 			<key>Sync Title</key>
 			<false/>
@@ -2461,6 +2527,75 @@
 			<integer>4</integer>
 			<key>Transparency</key>
 			<real>0.0</real>
+			<key>Triggers</key>
+			<array>
+				<dict>
+					<key>action</key>
+					<string>StopTrigger</string>
+					<key>disabled</key>
+					<false/>
+					<key>partial</key>
+					<false/>
+					<key>regex</key>
+					<string>http</string>
+				</dict>
+				<dict>
+					<key>action</key>
+					<string>StopTrigger</string>
+					<key>disabled</key>
+					<true/>
+					<key>regex</key>
+					<string>^[^/]*$</string>
+				</dict>
+				<dict>
+					<key>action</key>
+					<string>iTermHyperlinkTrigger</string>
+					<key>disabled</key>
+					<false/>
+					<key>parameter</key>
+					<string>file://KVF4JFC21Y\(tab.currentSession.path)/\(matches[0])#</string>
+					<key>partial</key>
+					<false/>
+					<key>regex</key>
+					<string>\b(?&lt;![/\w])(?&lt;!Δ )[a-zA-Z0-9_-]++[/\.][a-zA-Z0-9._/-]++</string>
+				</dict>
+				<dict>
+					<key>action</key>
+					<string>iTermHyperlinkTrigger</string>
+					<key>disabled</key>
+					<false/>
+					<key>parameter</key>
+					<string>file://KVF4JFC21Y/Users/rmartine/\(matches[1])#</string>
+					<key>partial</key>
+					<false/>
+					<key>regex</key>
+					<string>~/([a-zA-Z0-9._/-]++)</string>
+				</dict>
+				<dict>
+					<key>action</key>
+					<string>iTermHyperlinkTrigger</string>
+					<key>disabled</key>
+					<false/>
+					<key>parameter</key>
+					<string>file://KVF4JFC21Y\(matches[0])#</string>
+					<key>partial</key>
+					<false/>
+					<key>regex</key>
+					<string>(?&lt;![~\w])/[a-zA-Z0-9._/-]++</string>
+				</dict>
+				<dict>
+					<key>action</key>
+					<string>HighlightTrigger</string>
+					<key>disabled</key>
+					<true/>
+					<key>partial</key>
+					<false/>
+					<key>regex</key>
+					<string>\b(?&lt;![/\w])[a-zA-Z0-9_-]++[/\.][a-zA-Z0-9._/-]++</string>
+				</dict>
+			</array>
+			<key>Triggers Use Interpolated Strings</key>
+			<true/>
 			<key>Unicode Normalization</key>
 			<integer>0</integer>
 			<key>Unicode Version</key>
@@ -2491,29 +2626,30 @@
 			<string>~/dev</string>
 		</dict>
 	</array>
+	<key>NotifyOnlyForCriticalShellIntegrationUpdates</key>
+	<false/>
 	<key>OpenArrangementAtStartup</key>
 	<false/>
 	<key>OpenNoWindowsAtStartup</key>
 	<false/>
 	<key>OpenTmuxWindowsIn</key>
-	<integer>0</integer>
+	<integer>2</integer>
+	<key>OptionClickMovesCursor</key>
+	<false/>
 	<key>PMPrintingExpandedStateForPrint2</key>
 	<false/>
 	<key>PasteTabToStringTabStopSize</key>
 	<integer>4</integer>
 	<key>PerPaneBackgroundImage</key>
-	<true/>
+	<false/>
 	<key>PointerActions</key>
 	<dict>
-		<key>Button,1,1,,</key>
+		<key>Button,1,1,c,</key>
 		<dict>
 			<key>Action</key>
-			<string>kContextMenuPointerAction</string>
-		</dict>
-		<key>Button,2,1,,</key>
-		<dict>
-			<key>Action</key>
-			<string>kPasteFromClipboardPointerAction</string>
+			<string>kOpenTargetPointerAction</string>
+			<key>Version</key>
+			<integer>1</integer>
 		</dict>
 		<key>Gesture,ThreeFingerSwipeDown,,</key>
 		<dict>
@@ -2551,16 +2687,30 @@
 	<key>ShowNewOutputIndicator</key>
 	<false/>
 	<key>ShowPaneTitles</key>
-	<true/>
+	<false/>
 	<key>ShowYellowMarkForJobStoppedBySignal</key>
 	<true/>
+	<key>SolidUnderlines</key>
+	<false/>
 	<key>SoundForEsc</key>
 	<false/>
+	<key>StatusBarHeight</key>
+	<real>21</real>
+	<key>StatusBarPosition</key>
+	<integer>1</integer>
 	<key>StretchTabsToFillBar</key>
 	<true/>
 	<key>TabStyleWithAutomaticOption</key>
 	<integer>5</integer>
 	<key>TabsHaveCloseButton</key>
+	<true/>
+	<key>TerminalMargin</key>
+	<integer>3</integer>
+	<key>TerminalVMargin</key>
+	<integer>0</integer>
+	<key>TmuxSyncClipboard</key>
+	<false/>
+	<key>TmuxUnpauseAutomatically</key>
 	<true/>
 	<key>TmuxUsesDedicatedProfile</key>
 	<false/>
@@ -2569,7 +2719,13 @@
 		<string>Profiles</string>
 		<string>Command History</string>
 	</array>
+	<key>TriggerRadius</key>
+	<integer>1</integer>
 	<key>TripleClickSelectsFullWrappedLines</key>
+	<false/>
+	<key>UnderlineCursorHeight</key>
+	<real>2</real>
+	<key>UnderlineHyperlinks</key>
 	<false/>
 	<key>UseAdaptiveFrameRate</key>
 	<false/>
