--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -172,5 +172,6 @@ source-file ~/.config/tmux/tokyonight_day.tmux
 set -g status-left "#[fg=#e9e9ed,bg=#2e7de9,bold] #S #[fg=#2e7de9,bg=#e9e9ec,nobold,nounderscore,noitalics]"
 set -g status-right "#[fg=#e9e9ec,bg=#e9e9ec,nobold,nounderscore,noitalics]#[fg=#2e7de9,bg=#e9e9ec] #{prefix_highlight} #[fg=#a8aecb,bg=#e9e9ec,nobold,nounderscore,noitalics]#[fg=#2e7de9,bg=#a8aecb] Solar day: #(sundial --city Denver)  #(ddate +\"%%{%%d %%b, %%Y%%}%%N: %%H\")  %Y-%m-%d  %-I:%M %p #[fg=#2e7de9,bg=#a8aecb,nobold,nounderscore,noitalics]#[fg=#e9e9ed,bg=#2e7de9,bold] #(whoami) "
 
+set -g allow-passthrough on
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
