--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,6 +19,9 @@ set -g allow-passthrough on
 set -ga terminal-features "*:hyperlinks"
 # TODO open in vim https://gist.github.com/charlietran/43639b0f4e0a01c7c20df8f1929b76f2
 
+# Italics
+set -as terminal-overrides ',xterm*:sitm=\E[3m'
+
 set-window-option -g mode-keys vi
 
 # Allow the arrow key to be used immediately after changing windows
@@ -68,6 +71,7 @@ bind-key V run-shell 'tmux select-pane -t $(tmux list-panes -F "##{pane_id}" -f 
 set -g @yank_with_mouse off
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "reattach-to-user-namespace pbcopy" \; send -X clear-selection
 bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe "reattach-to-user-namespace pbcopy" \; send -X clear-selection
+# TODO bind cmd v to cancel copy mode??
 
 # A lot taken from here:
 # https://www.seanh.cc/2020/12/27/copy-and-paste-in-tmux/
@@ -138,6 +142,8 @@ bind-key -n TripleClick1Pane \
     run-shell -d 0.2 \; \
     send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy" \; \
     run-shell -d 0.01
+
+
 
 
 # List of plugins
