--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -43,7 +43,7 @@
 	}; f"
 	ppr = "!git push-pull-request"
 	tree = log --graph --all --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(bold white). %an%C(reset)%C(bold yellow)%d%C(reset)' --abbrev-commit --date=relative
-	squash = "!s() { if [ ! -z \"$1\" ];then if [ ! \"$(git rev-parse --abbrev-ref HEAD)\" = \"$1\" ];then git rebase --interactive $(git merge-base HEAD $1) ;else echo \"HEAD can't rebase against itself.  You can't rebase against the branch you have checked out.\"; return 1; fi; else echo \"No argument supplied.	Pass in a branch that you want to interactively rebase against compared to your current HEAD.\"; return 1; fi } ; s"
+	squash = "!s() { if [ ! -z \"$1\" ];then if [ ! \"$(git rev-parse --abbrev-ref HEAD)\" = \"$1\" ];then git rebase --interactive $(git merge-base HEAD $1) ;else echo \"HEAD can't rebase against itself.  You can't rebase against the branch you have checked out.\"; return 1; fi; else echo \"No argument supplied.  Pass in a branch that you want to interactively rebase against compared to your current HEAD.\"; return 1; fi } ; s"
 	checkpoint = "!cp() { git add -A && git commit -m checkpoint; } ; cp"
 	reuse = "!r() { git commit -C \"${1:-HEAD}\"; git commit --amend --reset-author; }; r"
 	# TODO rewrite for fork workflow
@@ -84,6 +84,7 @@
 		echo \"signing key: $(git config --get-all user.signingKey)\"; \
 		echo \"github: $(git config --get-all github.user)\"; \
 		}; f"
+	mirror-main = "! git checkout main && git remote update && git reset --hard upstream/main -- && git push --force-with-lease"
 	recent-branches-local = "!git for-each-ref --sort=committerdate refs/heads/ --format='%(refname:short) %(committerdate)'"
 	recent-branches-all = "!git for-each-ref --sort=committerdate refs/heads/ refs/remotes/ --format='%(refname:short) %(committerdate)'"
 [commit]
@@ -107,10 +108,13 @@
 	light = false
 [include]
 	path = ~/.config/git/tokyonight_day.gitconfig
+	path = ~/.config/git/delta-themes.gitconfig
 [status]
 	showUntrackedFiles = all
 [url "git@github.com:"]
 	insteadOf = https://github.com/
+[url "git@codeberg.org:"]
+	insteadOf = https://codeberg.org/
 [feature]
 	manyFiles = true
 [protocol "file"]
