--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -49,8 +49,11 @@ bind C-u copy-mode \; send -X search-backward "(https?://|git@|git://|ssh://|ftp
 bind r source-file ~/.tmux.conf \; display "TMUX configuration is reloaded!"
 
 set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'off'
+set -g @continuum-restore 'on'
+set -g @continuum-boot 'on'
+set -g @continuum-boot-options 'iterm'
 set -g @scroll-without-changing-pane 'on'
 set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
 set -g @scroll-speed-num-lines-per-scroll "1"
